--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.2.1",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
+    "@types/passport-oauth2": "^1.4.17",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-session": "^1.18.1"
+    "express-session": "^1.18.1",
+    "passport-google-oauth20": "^2.0.0",
+    "prisma": "^6.2.1"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
