backend with auth completed

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,6 +17,7 @@ NODE_ENV=""
 AUTH_REDIRECT_URL=""
 
 JWT_SECRET="jwt"
+JWT_EXPIRY=""
 
 
 DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5432/mydb?schema=public"
