--- a/backend/package.json
+++ b/backend/package.json
@@ -14,16 +14,22 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/passport": "^1.0.17",
     "@types/passport-oauth2": "^1.4.17",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "prisma": "^6.2.1"
   },
