doctor auth backend completed and

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,10 @@ GOOGLE_CLIENT_ID=""
 
 GOOGLE_CLIENT_SECRET=""
 
+GOOGLE_DOCTOR_ID=""
+
+GOOGLE_DOCTOR_SECRET=""
+
 ALLOWED_HOSTS="http://localhost:5173,http://localhost:3000"
 
 FRONTEND_URL="http://localhost:5173"
