--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,8 @@
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "prisma": "^6.2.1"
+    "prisma": "^6.2.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
