--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.7",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
+    "react-tailwindcss-datepicker": "^1.7.3",
     "recoil": "^0.7.7",
     "zod": "^3.24.1"
   },
