--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.6.0",
